# zebra

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  codecov.yml  justfile  regtest.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude/book-review/: formatting.md  math.md  standards.md
.claude/code-review/: correctness.md  design.md  standards.md
.claude/review-shared/: math.md  writing.md
.github/workflows/: ci.yml  lint.yml  notify-website.yml
book/: custom.css
book/src/: introduction.md
book/src/appendix/: cs.md
crates/ragu_circuits/: CHANGELOG.md  Cargo.toml
crates/ragu_core/: CHANGELOG.md  Cargo.toml  README.md
crates/ragu_gadgets/: README.md
crates/ragu_macros/: CHANGELOG.md  README.md
crates/ragu_pasta/: CHANGELOG.md  Cargo.toml  pasta_common.rs
crates/ragu_pcd/: COPYRIGHT  Cargo.toml
crates/ragu_primitives/: CHANGELOG.md
crates/ragu_testing/: COPYRIGHT
librustzcash/supply-chain/: audits.toml
librustzcash/zcash_client_backend/: Cargo.toml
librustzcash/zcash_client_sqlite/: CHANGELOG.md
qa/book/: broken_links.py  dead_pages.py
ragu/: CHANGELOG.md  Cargo.toml  _typos.toml
ragu/.claude/book-review/: formatting-examples.md  grammar.md  prose.md  structure.md
ragu/.claude/code-review/: documentation.md  history.md
ragu/.claude/skills/book-fixme/: SKILL.md
ragu/.claude/skills/code-review/: SKILL.md
ragu/.github/workflows/: rust.yml
ragu/book/: FIXME.md  README.md  book.toml  macros.txt
ragu/book/src/: SUMMARY.md
ragu/book/src/appendix/: related.md  snarks.md  terminology.md
ragu/book/src/guide/: configuration.md  getting_started.md  routines.md
ragu/book/src/guide/gadgets/: index.md  simple.md
ragu/book/src/implementation/: circuits.md
ragu/book/src/implementation/drivers/: custom.md  emulator.md
ragu/book/src/protocol/: analysis.md
ragu/book/src/protocol/core/accumulation/: revdot.md  wiring.md
ragu/book/src/protocol/prelim/: nested_commitment.md  notation.md  structured_vectors.md
ragu/crates/ragu_arithmetic/: CHANGELOG.md  README.md
ragu/crates/ragu_arithmetic/src/: coeff.rs  domain.rs  fft.rs  util.rs
ragu/crates/ragu_circuits/: README.md
ragu/crates/ragu_circuits/benches/setup/: mod.rs
ragu/crates/ragu_circuits/src/: floor_planner.rs  ky.rs  metrics.rs  registry.rs  trivial.rs
ragu/crates/ragu_circuits/src/polynomials/: mod.rs  structured.rs
ragu/crates/ragu_circuits/src/s/: mod.rs  sxy.rs
ragu/crates/ragu_circuits/src/staging/: mask.rs
ragu/crates/ragu_core/src/: gadgets.rs  lib.rs  routines.rs
ragu/crates/ragu_core/src/drivers/: emulator.rs  phantom.rs
ragu/crates/ragu_core/src/maybe/: always.rs  cast.rs
ragu/crates/ragu_gadgets/: CHANGELOG.md
ragu/crates/ragu_macros/src/: helpers.rs
ragu/crates/ragu_macros/src/proc/: maybe_cast.rs
ragu/crates/ragu_pasta/: README.md
ragu/crates/ragu_pasta/src/: poseidon_fp.rs  poseidon_fq.rs
ragu/crates/ragu_pcd/: CHANGELOG.md  README.md
ragu/crates/ragu_pcd/benches/setup/: mod.rs
ragu/crates/ragu_pcd/src/circuits/: mod.rs  tests.rs
ragu/crates/ragu_pcd/src/circuits/native/: compute_v.rs  mod.rs
ragu/crates/ragu_pcd/src/circuits/native/stages/: mod.rs  preamble.rs  query.rs
ragu/crates/ragu_pcd/src/components/: horner.rs
ragu/crates/ragu_pcd/src/components/claims/: mod.rs
ragu/crates/ragu_pcd/src/fuse/: _02_preamble.rs  _03_s_prime.rs  _08_f.rs  mod.rs
ragu/crates/ragu_pcd/src/step/: encoder.rs
ragu/crates/ragu_pcd/src/step/internal/: rerandomize.rs  trivial.rs
ragu/crates/ragu_pcd/tests/: nontrivial.rs  registration_errors.rs  rerandomization.rs
ragu/crates/ragu_primitives/: Cargo.toml  README.md
ragu/crates/ragu_primitives/src/: lib.rs  point.rs  util.rs  vec.rs
ragu/crates/ragu_testing/: CHANGELOG.md  Cargo.toml  README.md
ragu/crates/ragu_testing/src/: lib.rs
ragu/crates/ragu_testing/src/pcd/: nontrivial.rs
ragu/qa/book/: line_width.py
tachyon/: COPYRIGHT  Cargo.toml  clippy.toml  justfile  rust-toolchain.toml
tachyon/crates/tachyon/: Cargo.toml
tachyon/crates/tachyon/src/: bundle.rs  note.rs  value.rs  witness.rs
tachyon/crates/tachyon/src/keys/: note.rs  proof.rs  public.rs
tachyon/crates/tachyon/src/primitives/: epoch.rs  tachygram.rs
tachyon/src/: action.rs  bundle.rs  keys.rs  lib.rs  note.rs  primitives.rs  proof.rs  stamp.rs  tachygram.rs  tachystamp.rs  value.rs
tachyon/src/keys/: mod.rs  redpallas.rs
tachyon/src/primitives/: keys.rs  mod.rs  redpallas.rs
zcash_client_backend/: CHANGELOG.md
zcash_client_backend/src/: data_api.rs
zcash_client_sqlite/src/: wallet.rs
zebra-chain/: Cargo.toml
zebra-chain/src/: block.rs  history_tree.rs  lib.rs  orchard.rs  sapling.rs  tachyon.rs  transaction.rs
zebra-consensus/: Cargo.toml
zebra-consensus/src/: block.rs  primitives.rs  transaction.rs
zebra-rpc/: Cargo.toml
zebra-rpc/src/: methods.rs
zebra-state/: Cargo.toml
zebra-state/src/: error.rs  tests.rs
zebra-test/: Cargo.toml
zebrad/: Cargo.toml
zebrad/tests/: acceptance.rs
(+179 files in other folders)
