[package]
name = "tachyon"
version = "0.0.0"
edition = "2024"
rust-version = "1.90.0"
description = "The Tachyon shielded transaction protocol (stub)"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]
keywords = ["zcash", "tachyon"]

[dependencies]
serde = { workspace = true }
core2 = { version = "0.3", default-features = false, features = ["alloc"] }

# Cryptographic primitives
ff = { version = "0.13", default-features = false }
group = { version = "0.13", default-features = false }
pasta_curves = "0.5.1"
rand.workspace = true
reddsa.workspace = true
bitvec.workspace = true
sinsemilla = "0.1.0"
blake2b_simd.workspace = true

[dev-dependencies]
proptest = { workspace = true }

[lib]
bench = false

[features]
default = ["std"]
std = ["core2/std"]
